syntax = "proto2";

package jroom;

option java_package = "com.caporal7.jroom.common.java.protoc";
option java_outer_classname = "JRoomJoinConferenceProtos";

/* Send a probing request (Check if a conference ID is valid) */
message JRoomJoinConferenceProbeRequest {
  optional int32 conference_id = 1;
}

message JRoomJoinConferenceProbeResponse {
  enum ProbeResponseType {
    INVALID_ID = 0;
    SUCCESS    = 1;
  }
  optional ProbeResponseType response = 1 [default = INVALID_ID];
}

/* Send a join request (Sends the password as well) */
message JRoomJoinConferenceAuthRequest {
  optional int32 conference_id = 1;
  optional int32 password = 2;
  optional bool is_guest = 3;
  optional string session_cookie = 4;
}

message JRoomJoinConferenceAuthResponse {
  enum AuthResponseType {
    INVALID_ID   = 0;
    INVALID_PASS = 1;
    SUCCESS      = 2;
  }
  optional AuthResponseType response = 1 [default = INVALID_ID];
  optional string access_token = 2;
}

